--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server.js"
+    "server": "node server.js",
+    "build": "npm i && npm build"
   },
   "author": "",
   "license": "ISC",
